docs/部署流程/线上/ingress/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: prod-env
spec:
  ingressClassName: nginx
  rules:
    - host: minilink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          # 后端服务 Service 就不用暴露了，不需要直接把后端接口给别人调用啊！
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
